--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -5,18 +5,6 @@ html, body {
  width:100%;
 }
 
-.header {
- padding: 15px;
-}
-
-.header img {
-   display: inline-block;
-}
-
-.header h1 {
-   display: inline-block;
-}
-
 .main {
  background-color: #f2f2f2 ;
  padding: 40px 0;
@@ -25,10 +13,8 @@ html, body {
 .main h1 {
  color: #F65A5B ;
  font-size: 20px;
- /*margin: 0 0 80px 0;*/
+ margin-left: 5px;
  padding: 20px 0;
-   line-height: 60px;
-   width: 50%;
 }
 
 .main h2 {
@@ -41,4 +27,8 @@ html, body {
 
 li {
   list-style: none;
+}
+
+.about-list li {
+  list-style: circle;
 }
